# mtl-c2pa-ableton

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
device/: PATCHER.md
device/scripts/: c2pa_node.js  c2pa_reader.js  package.json
docs/: architecture.md  article-draft.md
install/: install.sh  io.musictechlab.c2pa-http.plist  uninstall.sh
src/mtl_c2pa_server/: __main__.py  http.py
tests/: test_c2pa.py  test_http.py
